--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/BurntCaramel/react-meadow#readme",
   "devDependencies": {
     "babel-cli": "^6.2.0",
+    "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "rimraf": "^2.4.3"
