--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-meadow",
-  "version": "0.2.0a18",
+  "version": "0.2.0b1",
   "description": "Create nested editable fields with just JSON",
   "main": "index.js",
   "scripts": {
@@ -34,6 +34,7 @@
     "rimraf": "^2.4.3"
   },
   "peerDependencies": {
-    "react": "^0.14.0"
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0"
   }
 }
