Improve default web, enable auto selecting fields

--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
   "peerDependencies": {
     "react": "^15.1.0",
     "react-dom": "^15.1.0"
+  },
+  "dependencies": {
+    "react-sow": "^0.2.2"
   }
 }
